[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskmodels"
version = "0.0.1"
authors = [
  { name="YAO Siyuan", email="siyuan89@163.com" },
]
description = "信用风险模型工具包"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/siyuany/riskmodels"
"Bug Tracker" = "https://github.com/siyuany/riskmodels/issues"