[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syriskmodels"
version = "0.2.6"
authors = [
  { name="YAO Siyuan", email="siyuan89@163.com" },
]
description = "信用风险模型工具包"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pandas >= 1.5, == 1.*",
    "matplotlib >= 3.3",
    "numpy >= 1.26.0",
    "scipy >= 1.6",
    "scikit-learn >= 1.4.0",
    "statsmodels >= 0.14.0",
    "numba == 0.60.*",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/siyuany/riskmodels"
"Bug Tracker" = "https://github.com/siyuany/riskmodels/issues"