[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syriskmodels"
version = "0.3.0"
authors = [
  { name="YAO Siyuan", email="siyuan89@163.com" },
]
description = "信用风险模型工具包"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas >= 3.0",
    "matplotlib >= 3.10",
    "numpy >= 2.0",
    "scipy >= 1.14",
    "scikit-learn >= 1.6",
    "statsmodels >= 0.14.0",
    "numba >= 0.60",
    "pyarrow >= 10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/siyuany/riskmodels"
"Bug Tracker" = "https://github.com/siyuany/riskmodels/issues"